# libopenfocus

./: .gitignore  LICENSE.txt  LibOpenFocus.pro  Makefile  Makefile.am  Makefile.win  OpenFocus.pro  README.md  aclocal.m4  bootloader.cpp  cdevice.cpp  configure.ac  device.cpp  helper.cpp  intelhex.cpp  intelhex.h  openfocus.h  util.h
LibOpenFocus.xcodeproj/: ejholmes.mode1v3  ejholmes.pbxuser  project.pbxproj
commandline/: .gitignore  Makefile  bootloader.cpp  openfocus  openfocus.cpp
src/: Makefile.am  cdevice.cpp  intelhex.h  openfocus_priv.h
tests/: Makefile  main.cpp  main.hex
